k8s/simple-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-ui
  namespace: chatbot-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbot-ui
  template:
    metadata:
      labels:
        app: chatbot-ui
    spec:
      containers:
      - name: chatbot-ui
        image: 739275449845.dkr.ecr.us-east-1.amazonaws.com/openai-gptbotclone:v1.0.0-84c721d
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1001
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-ui-service
  namespace: chatbot-ui
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: chatbot-ui
